Edit Lattice configuration

--- a/src/content/graphos/cloud-routing/dedicated/lattice-management.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice-management.mdx
@@ -1,6 +1,6 @@
 ---
-title: Amazon VPC Lattice service management
-subtitle: Restrict and remove access to subgraphs
+title: Lattice service management
+subtitle: Monitor, restrict, and remove access to subgraphs
 description: To-do
 ---
 
