--- a/src/content/graphos/cloud-routing/dedicated/lattice-troubleshooting.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice-troubleshooting.mdx
@@ -1,5 +1,5 @@
 ---
-title: Amazon VPC Lattice troubleshooting guide
+title: Lattice troubleshooting guide
 subtitle: Troubleshoot common issues and errors with Amazon VPC Lattice
 description: Troubleshoot common issues and errors with Amazon VPC Lattice and an Apollo Cloud Dedicated router
 ---
